[package]
name = "condor_credmon"
description = "Rust version of a condor credmon"
version = "0.1.0"
repository = "https://github.com/WIPACrepo/condor-credmon"
license = "MIT"
edition = "2021"
publish = false

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/condor_credmon", dest = "/usr/sbin/condor_credmon_rust" },
    { source = "target/release/client", dest = "/usr/bin/condor_credmod_rust_client", mode = "4755" }
]

[package.metadata.generate-rpm.requires]
condor = ">= 24"

[dependencies]
memoize = { version = "0.5.1", default-features = false }
oauth2 = { version = "5.0.0", features = ["reqwest-blocking", "rustls-tls"] }
openidconnect = { version = "4.0.1", features = ["reqwest-blocking", "rustls-tls"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
signal-hook = "0.3.18"
whoami = "1.6.1"
