[package]
name = "condor_credmon"
description = "Rust version of a condor credmon"
repository = "https://github.com/WIPACrepo/condor-credmon"
license = "MIT"
edition = "2024"
publish = false

[package.metadata.generate-rpm]
name = "condor-credmon-rust"
assets = [
    { source = "target/release/condor_credmon", dest = "/usr/sbin/condor_credmon_rust" },
    { source = "target/release/client", dest = "/usr/bin/condor_credmod_rust_client", mode = "4755" }
]

[package.metadata.generate-rpm.requires]
condor = ">= 24"

[package.metadata.generate-rpm.conflicts]
condor-credmon-oauth = "*"

[dependencies]
log = "0.4.27"
log4rs = { version = "1.3.0", default-features = false, features = ["chrono", "compound_policy", "console_appender", "console_writer", "delete_roller", "file_appender", "fixed_window_roller", "pattern_encoder", "rolling_file_appender", "size_trigger", "time_trigger"] }
memoize = { version = "0.5.1", default-features = false }
nix = { version = "0.30.1", features = [ "user" ] }
oauth2 = { version = "5.0.0", features = ["reqwest-blocking", "rustls-tls"] }
openidconnect = { version = "4.0.1", features = ["reqwest-blocking", "rustls-tls"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
signal-hook = "0.3.18"
stderrlog = "0.6.0"
tempfile = "3.20.0"
